--- a/src/components/NewComment/newComment.css
+++ b/src/components/NewComment/newComment.css
@@ -8,7 +8,7 @@ main {
   justify-content: center;
   align-items: center;
   background-color: #cddc39;
-  width: 930px;
+  width: 455px;
   height: auto;
   color: #000000;
   border-radius: 5px;
@@ -34,10 +34,10 @@ input {
 button {
   padding: 10px 15px;
   outline: none;
-  color: #3f51b5;
+  color: #313507;
   background-color: transparent;
   border-radius: 5px;
-  border: 1px solid #3f51b5;
+  border: 1px solid #313507;
   margin-top: 10px;
   cursor: pointer;
   transition: 0.3s ease;
@@ -45,7 +45,7 @@ button {
 
 button:hover {
   color: #ffffff;
-  background-color: #4338ca;
+  background-color: #31350738;
 }
 
 label {
@@ -66,4 +66,5 @@ label {
   filter: blur(4px);
   visibility: visible;
   pointer-events: none;
+  user-select: none;
 }
